<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Data Storage</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Please Enter Personal Details</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="address">Address:</string>
    <string name="card_details">Credit Card Number:</string>
    <string name="process">Process Data</string>
    <string name="save">Save Data</string>
    <string name="report">Report Data</string>
    <string name="close">Close</string>
    <string name="title_activity_save">Save</string>
    <string name="hello_world">Hello world!</string>
    <string name="sql_lite">SQLite</string>
    <string name="shared_preferences">Preferences</string>
    <string name="title_activity_process">Process</string>
    <string name="processing">Processing Request...</string>
    <string name="timer"></string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="complete">Complete Procss</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="shared_preference_result">Shared Preferences Record</string>
    <string name="sql_result">SQLite Database Record</string>
    <string name="display_sql_result"></string>
    <string name="select_storage">Select a Means of Storage</string>

</resources>
