<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".ReportActivity" >

    <TextView
        android:id="@+id/shared_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared_preference_result"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/sql_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:text="@string/sql_result"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/display_sql_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_sql_result" />

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="done"
        android:text="Done" />

</LinearLayout>
